# apidevtools

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt  speedups.txt  update.sh
apidevtools/: __init__.py  datetime.py  hasher.py  telegraph.py  utils.py
apidevtools/avatar/: __init__.py  avatar.py  image.py
apidevtools/security/: encryption.py
apidevtools/simpleorm/: __init__.py  base.py  postgres.py  records.py  relation.py  schema.py
apidevtools/simpleorm/record/: __init__.py  base.py  records.py
apidevtools/simpleorm/storage/: __init__.py  base.py  postgres.py
apidevtools/template/template/: LICENSE.txt
apidevtools/template/template/api/: requirements.txt
apidevtools/template/template/api/src/: app.py
apidevtools/template/template/api/src/crud/: __init__.py  category.py  field.py  item.py  user.py
apidevtools/template/template/api/src/routers/: __init__.py  category.py  field.py  item.py  password.py
apidevtools/template/template/api/src/schemas/: __init__.py  category.py  field.py  item.py  user.py
docker/: info  mysql.yml  postgresql.yml  redis.yml
examples/: enc_async.py  enc_sync.py  encryptor.py  logman.py  orm.py  requirements.txt  temp.py
examples/orm/: mysql.py
src/: __init__.py  hasher.py  requirements.txt  speedups.txt
src/APIDevTools/: __init__.py  datetime.py  logman.py  telegraph.py  utils.py
src/APIDevTools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/APIDevTools/avatar/: __init__.py  avatar.py  image.py
src/APIDevTools/imgproc/: __init__.py  image.py  tools.py
src/APIDevTools/media/: __init__.py  imgproc.py  telegraph.py
src/APIDevTools/security/: __init__.py  encryptor.py  hasher.py
src/APIDevTools/simpleorm/: base.py  postgres.py  records.py  relation.py  schema.py
src/APIDevTools/template/: create.py
src/APIDevTools/template/template/: .gitignore
src/APIDevTools/template/template/api/src/: app.py  const.py
src/APIDevTools/template/template/api/src/crud/: auth.py  item.py  user.py
src/APIDevTools/template/template/api/src/routers/: __init__.py  auth.py  item.py  user.py
src/apidevtools/: __init__.py  logman.py  utils.py
src/apidevtools.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/apidevtools/media/: imgproc.py  telegraph.py
src/apidevtools/orm/: __init__.py  mysql.py  orm.py  postgresql.py  sqlite.py
src/apidevtools/orm/_crud/: __init__.py  _operation.py  delete.py  insert.py  select.py  update.py
src/apidevtools/orm/connector/: __init__.py  _connector.py  mysql.py  postgresql.py  sqlite.py
src/apidevtools/orm/types/: __init__.py  _connector.py  schema.py  types.py
src/apidevtools/orm/types/_operations/: __init__.py  _operation.py  delete.py  insert.py  select.py  update.py
src/apidevtools/security/: encryptor.py  hasher.py
src/apidevtools/simpleorm/: __init__.py  baseorm.py  orm.py  postgres.py  records.py  redis.py  relation.py  schema.py  types.py
src/apidevtools/simpleorm/connector/: _base.py  base.py  postgresql.py
src/apidevtools/simpleorm/connectors/: _connector.py  mysql.py  postgresql.py  sqlite.py
src/apidevtools/simpleorm/types/: __init__.py  records.py  relation.py  schema.py
src/apidevtools/template/template/: README.md  requirements.txt
src/apidevtools/template/template/api/src/: const.py
src/avatar/: __init__.py  avatar.py
src/hasher/: __init__.py
src/simpleorm/: base.py  postgres.py  records.py  schema.py
src/telegraph/: __init__.py  telegraph.py
tests/: avatar.py  encryptor.py  logman.py  postgresql.py  redis.py  requirements.txt  simpleorm.py  sqlite.py  telegraph.py  temp.py
tests/orm/: data.py  mysql.py  postgresql.py  sqlite.py
update/: update.py
(+5 files in other folders)
