[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "APIDevTools"
version = "1.0.0"
authors = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
description = "All in one tools for API creation."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "asyncpg",
    "pydantic",
    "loguru",
#    "importlib-resources~=5.10.0"
]

[project.urls]
"Homepage" = "https://github.com/cxllmerichie/APIDevTools"
"Bug Tracker" = "https://github.com/cxllmerichie/APIDevTools/issues"
