[build-system]
requires = ["setuptools>=63.2"]
build-backend = "setuptools.build_meta"

[project]
name = "apidevtools"
version = "1.0.2"
authors = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
description = "All in one tools for API development."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: FastAPI",
    "Topic :: Software Development",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "aiodns~=3.0.0",
    "aiohttp~=3.8.3",
    "cchardet~=2.1.7",
    "python-dateutil~=2.8.2",
    "argon2-cffi~=21.3.0",
    "asyncpg~=0.27.0",
    "telegraph~=2.2.0",
    "httpx~=0.23.3",
    "loguru~=0.6.0",
    "numpy~=1.24.1",
    "Pillow~=9.4.0",
    "pydantic~=1.10.4"
]

[project.urls]
"Homepage" = "https://github.com/cxllmerichie/apidevtools"
"Bug Tracker" = "https://github.com/cxllmerichie/apidevtools/issues"
