[build-system]
requires = ["setuptools>=63.2"]
build-backend = "setuptools.build_meta"

[project]
name = "apidevtools"
version = "3.2.4"
authors = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
maintainers = [
    { name="cxllmerichie", email="cxllmerichie@gmail.com" },
]
description = "All in one tools for API development."
readme = "README.md"
license = { file="LICENSE.txt" }
requires-python = ">=3.10"
classifiers = [
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security :: Cryptography",
    "Topic :: Database :: Front-Ends",

    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.10",

    "Natural Language :: English",

    "Development Status :: 4 - Beta",

    "Framework :: FastAPI",

    "Intended Audience :: Developers",

    "Operating System :: OS Independent",

    "License :: OSI Approved :: MIT License"
]
dependencies=[
#simpleorm
#    "pydantic~=1.10.4",
#    "loguru~=0.6.0",
#    "asyncpg~=0.27.0",
#    "aiomysql~=0.1.1",
#    "aioredis~=2.0.1",
#    "aiosqlite~=0.18.0",

#imgproc
#    "Pillow~=9.4.0",
#    "numpy~=1.24.2",
#    "aiohttp~=3.8.3",

#security
#    "argon2-cffi~=21.3.0",
#    "cryptography~=39.0.2",

#speedups
#    "ujson~=5.7.0",
#    "aiodns~=3.0.0",
#    "cchardet~=2.1.7",
#    "uvloop~=0.17.0"
]

[tool.setuptools.package-data]
apidevtools = ["template/template.zip", "media/ARIALNB.TTF"]

[project.urls]
"Homepage" = "https://github.com/cxllmerichie/apidevtools"
"Bug Tracker" = "https://github.com/cxllmerichie/apidevtools/issues"
"Repository" = "https://github.com/cxllmerichie/apidevtools"
"Documentation" = "https://github.com/cxllmerichie/apidevtools/README.md"